sandbox/output
MedicineClashTest.java:32: error: constructor Customer in class Customer cannot be applied to given types;
        Customer customerNotTakingBothMedicines = new Customer("110101197010104510", "Ben", medicines);
                                                  ^
  required: no arguments
  found: String,String,Set<Medicine>
  reason: actual and formal argument lists differ in length
MedicineClashTest.java:34: error: cannot find symbol
        assertEquals(expectedClashedSet, medicineClash.Of(customers));
                                         ^
  symbol:   variable medicineClash
  location: class MedicineClashTest
2 errors
